--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="{% static 'fa/css/all.min.css' %}">
     <title>Online Library</title>
 
+    {% block pre-script %}
+    {% endblock %}
 </head>
 <body>
     <header class="p-2 bg-dark">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <i class="fa-solid fa-book-bookmark"></i>
                     Online Library</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,19 +23,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-lg-flex w-100">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="/" id="inicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Seguidos</a>
+                            <a class="nav-link" href="#" id="seguidos">Seguidos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recomendados</a>
+                            <a class="nav-link" href="/recommendations" id="recomendaciones">Recomendados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Publicar</a>
+                            <a class="nav-link" href="#" id="publicar">Publicar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Feed</a>
+                            <a class="nav-link" href="/collections" id="colecciones">Colecciones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/social/feed" id="feed">Feed</a>
                         </li>
                         <li class="nav-item dropdown d-flex align-items-center ms-lg-auto" >
                             <div class="d-flex me-2 me-lg-0">
@@ -43,7 +48,7 @@
                                 {{ user.username|default:"nothing" }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-lg-end">
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item" href="/accounts/logout">
                                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                                     Cerrar sesión
                                 </a></li>
@@ -64,6 +69,14 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script>
+
+        var base = `{% block page %}{% endblock %}`.trim();
+        window.addEventListener('load', () => {
+            document.getElementById("inicio").classList.toggle("active", false);
+            document.getElementById(base).classList.toggle("active", true);
+        })
+    </script>
     {% block post-script %}
     {% endblock %}
 </body>
