--- a/templates/annotations/my-notes.html
+++ b/templates/annotations/my-notes.html
@@ -1,39 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block pre-script %}
     <script src="https://kit.fontawesome.com/258d808132.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
-        * {
+        *{
             box-sizing: border-box;
         }
-
         .nav-tabs .nav-item .nav-active {
             background-color: rgb(235, 127, 39);
         }
-
         /* Estilo para el contenedor con scroll */
         .scroll-container {
             max-height: 90vh;
             overflow-y: auto;
         }
-
         #pdfViewer {
             max-height: 90vh;
             overflow: auto;
         }
-
     </style>
     <title>{{ document.title }}</title>
+    {% endblock %}
 </head>
 
-{% load static %}
-
-{% block content %}
-    <body>
+<body>
+    {% block content %}
     <div class="container-fluid">
         <div class="row">
             <h1 class="px-3 my-0">{{ document.title }}</h1>
@@ -44,22 +36,22 @@
         <div class="row pt-2">
             <div class="col-7  px-3 ">
 
-                <div class="d-flex justify-content-center align-items-center   bg-primary">
+                <div class="d-flex justify-content-center align-items-center   bg-secondary">
                     <!--Numero de pagina--><!-- Botones para cambiar de página -->
-                    <a id="btnPrevious" class="btn btn-primary mx-1 py-0"
-                       href="/annotations/book/{{ document.uid }}/?page={{ page|add:"-1" }}">
+                    <a id="btnPrevious" class="btn btn-dark mx-1 py-0 text-light"
+                       href="/annotations/book/{{ document.uid }}/?page={{ page|add:"-1"}}">
                         <i class="fa-solid fa-arrow-right fa-rotate-180" style="color: #ffffff;"></i>
                     </a>
                     <span class="px-1 mx-1 text-light fw-bold" id="currentPage">-</span>
                     <span class="fw-bold px-1 text-light"> / </span>
                     <span class="px-1 mx-1 text-light fw-bold" id="totalPages">-</span>
-                    <a id="btnNext" class="btn btn-primary mx-1 py-0 text-light"
+                    <a id="btnNext" class="btn btn-dark mx-1 py-0 text-light"
                        href="/annotations/book/{{ document.uid }}/?page={{ page|add:"+1" }}">
                         <i class="fa-solid fa-arrow-right" style="color: #ffffff;"></i>
                     </a>
                 </div>
 
-                <div class="border border-2 border-primary d-flex justify-content-center align-items-center bg-light">
+                <div class="border border-2 border-secondary d-flex justify-content-center align-items-center bg-light">
                     <div id="pdfViewer">
 
                         <!-- Aquí va el PDF -->
@@ -72,7 +64,7 @@
                 <div class="row">
                     <ul class="nav nav-tabs nav-justified px-0 ">
                         <li class="nav-item">
-                            <a class="nav-link nav-active text-light fw-bold bg-primary py-0" aria-current="page"
+                            <a class="nav-link nav-active text-light fw-bold bg-secondary py-0" aria-current="page"
                                href="#">
                                 Mis anotaciones</a>
                         </li>
@@ -84,14 +76,14 @@
 
                 <!--NUEVA ANOTACION-->
 
-                <div class="row border border-primary border-2 ">
+                <div class="row border border-secondary border-2 ">
                     <div class="mb-1 px-2 pt-2">
                         <label for="anotation" class="form-label">Nueva anotación</label>
                         <form method="post" id="note_form">
                             {% csrf_token %}
                             <textarea class="form-control" name="annotation" id="anotation" rows="3"></textarea>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end py-2">
-                                <button class="btn btn-primary fw-bold py-0" type="submit">Guardar</button>
+                                <button class="btn btn-dark text-light fw-bold py-0" type="submit">Guardar</button>
                             </div>
                         </form>
                     </div>
@@ -100,8 +92,7 @@
 
                 <!--anotaciones-->
                 <div id="notes_container"
-                     class="row scroll-container  px-2 pt-2 border border-right-0 border-top-0 border-left-0 border-primary border-2">
-
+                     class="row scroll-container  px-2 pt-2 border border-right-0 border-top-0 border-left-0 border-secondary border-2">
                     <div class="card mb-2 px-0 ">
                         {% for note in notes %}
                             <div class="card-header d-flex justify-content-between align-items-center px-2 py-0 ">
@@ -133,30 +124,22 @@
 
                 </div>
                 <!--fin-anotaciones-->
-
             </div>
-
         </div>
     </div>
-
-
-    </body>
 {% endblock %}
+</body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+{% block post-script %}
 <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.10.111/build/pdf.min.js"></script>
 <script src="/static/app.js"></script>
 <script>
     const pdfUrl = "{{ document.url }}";
-
 </script>
-
 <script>
     let pageCounter = {{ page }};
 </script>
-
 <script>
-
     const botones = document.querySelectorAll(".favorite");
 
     botones.forEach(function (boton) {
@@ -168,16 +151,12 @@
                 boton.classList.add("fa-solid");
 
             } else {
-                // Si tiene la nueva clase, quítala y agrega la clase original
+                // Si tiene la nueva clase, la quíta y agrega la clase original
                 boton.classList.remove("fa-solid");
                 boton.style.color = "black"
                 boton.classList.add("fa-regular");
             }
         });
     });
-
 </script>
-
-
-</html>
-
+{% endblock %}
