--- a/templates/annotations/document_info.html
+++ b/templates/annotations/document_info.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/77c9f8f14c.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>{{ document.title }}</title>
-</head>
-<body class="container">
-    <div class="row">
-        <div class="col">
-            <h1>{{ document.title }}</h1>
-            <div>
-                <img src="" alt="Portada del libro {{ document.title }}" id="coverImage" data-path="{{ document.path }}" />
-            </div>
-        </div>
-        <div class="col">
-            <h2>Descripcion</h2>
-            <p>Autor: {{ document.author.name }}</p>
-            <p>Categoria: {{ document.category }}</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pellentesque eros elit, vitae cursus odio egestas et. Nullam vestibulum malesuada fermentum. Fusce lacus nibh, volutpat eu tempor pretium, feugiat nec odio. Praesent facilisis nibh ac tortor egestas, sed venenatis dolor volutpat. Duis vitae porttitor dolor. In quis pellentesque nunc. Phasellus et quam sit amet diam feugiat luctus. Sed in commodo leo. Etiam aliquam, purus sed luctus accumsan, eros quam aliquam tortor, eu feugiat massa leo efficitur justo. Fusce convallis lorem ac mi tempor, eget sodales lorem ornare. Morbi tincidunt convallis venenatis.</p>
-            <div class="text-center">
-                <a role="button" href="#" class="btn btn-primary">Ver documento</a>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <h2>Notas</h2>
-        <div class="col">
-            {% block general_notes %}{% endblock %}
-        </div>
-        <div class="col">
-            <p>Insert notes go here</p>
-        </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+{% extends 'base.html' %}
+
+{% block pre-script %}
+    <script src="https://kit.fontawesome.com/77c9f8f14c.js" crossorigin="anonymous"></script>
+    <title>{{ document.title }}</title>
+{% endblock %}
+
+{% block content %}
+	 <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>{{ document.title }}</h1>
+                <div>
+                    <img src="" alt="Portada del libro {{ document.title }}" id="coverImage" data-path="{{ document.path }}" />
+                </div>
+            </div>
+            <div class="col">
+                <h2>Descripcion</h2>
+                <p>Autor: {{ document.author.name }}</p>
+                <p>Categoria: {{ document.category }}</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pellentesque eros elit, vitae cursus odio egestas et. Nullam vestibulum malesuada fermentum. Fusce lacus nibh, volutpat eu tempor pretium, feugiat nec odio. Praesent facilisis nibh ac tortor egestas, sed venenatis dolor volutpat. Duis vitae porttitor dolor. In quis pellentesque nunc. Phasellus et quam sit amet diam feugiat luctus. Sed in commodo leo. Etiam aliquam, purus sed luctus accumsan, eros quam aliquam tortor, eu feugiat massa leo efficitur justo. Fusce convallis lorem ac mi tempor, eget sodales lorem ornare. Morbi tincidunt convallis venenatis.</p>
+                <div class="text-center">
+                    <a role="button" href="#" class="btn btn-primary">Ver documento</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <h2>Notas</h2>
+            <div class="col">
+                {% block general_notes %}{% endblock %}
+            </div>
+            <div class="col">
+                <p>Insert notes go here</p>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+   
+
+{% block post-script %}
+
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.10.111/build/pdf.min.js"></script>
 
    <script>
@@ -69,6 +73,5 @@
             console.error('Error al cargar y renderizar el PDF:', error);
         });
     </script>
+{% endblock %}
 
-</body>
-</html>
