--- a/templates/social/visualizarInformacion.html
+++ b/templates/social/visualizarInformacion.html
@@ -75,21 +75,21 @@
 
         <!-- Campo de calificacion por numero de estrellas (Libro/Artículo) -->
         <label for="calificacion"><strong>Calificación del libro/artículo:</strong></label>
-<<<<<<< HEAD
             <select class="input-field form-control" name="calificacion" onchange="setScore(this.value)">
                 <option value="FiveStars">5 estrellas</option>
                  <option value="FourStars">4 estrellas</option>
                  <option value="TreeStars">3 estrellas</option>
                  <option value="TwoStars">2 estrellas</option>
                  <option value="OneStar">1 estrella</option>
-=======
+            </select>
+
             <select class="input-field form-control" name="calificacion">
                 <option onclick="setScore(5)" value="FiveStars">5 estrellas</option>
                  <option onclick="setScore(4)" value="FourStars">4 estrellas</option>
                  <option onclick="setScore(3)" value="TreeStars">3 estrellas</option>
                  <option onclick="setScore(2)" value="TwoStars">2 estrellas</option>
                  <option onclick="setScore(1)" value="OneStar">1 estrella</option>
->>>>>>> team2-feature4
+
             </select>
 
         <button onclick="window.open('{{ document.url }}', '_blank');" class="download-button" >Descargar documento</button>
